--- a/ktlint.gradle
+++ b/ktlint.gradle
@@ -11,15 +11,15 @@ dependencies {
     ktlint "com.pinterest:ktlint:0.36.0"
 }
 
-task ktlintCheck(type: JavaExec, group: "verification") {
+task codeCheck(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.github.shyiko.ktlint.Main"
+//    main = "com.github.shyiko.ktlint.Main"
     main = "com.pinterest.ktlint.Main"
     args "src/**/*.kt"
 }
 
-task ktlintFormat(type: JavaExec, group: "formatting") {
+task codeFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
 //    main = "com.github.shyiko.ktlint.Main"
