--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply plugin: 'com.google.gms.google-services'
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
@@ -55,5 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+//    Firebase SDK(Google Analytics)
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
 }
