--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # for error "Entry name 'AndroidManifest.xml' collided"
-android.useNewApkCreator=false
+#android.useNewApkCreator=false
